# raylib-gizmo

./: .gitignore  CMakeLists.txt  README.md  mingw-w32-x86_64.cmake  mingw-w64-x86_64.cmake
examples/: CMakeLists.txt  common.h  example_01_getting_started.c  example_02_gizmo_types.c
examples/gizmo/: example_01_getting_started.c  example_02_gizmo_types.c
src/: raygizmo.c
